--- a/ubuntu/apturl-ubu11.10.html
+++ b/ubuntu/apturl-ubu11.10.html
@@ -100,6 +100,7 @@
 	<input name="chkbox[]" type="checkbox" value="indicator-cpufreq"> <a href="apt://indicator-cpufreq">Indicator CPUfreq</a> - CPU frequency scaling indicator. <a href="https://launchpad.net/~artfwo/+archive/ppa">(more)</a><br>
 	<input name="chkbox[]" type="checkbox" value="indicator-keylock,indicator-keylock-ubuntu-mono"> <a href="apt://indicator-keylock,indicator-keylock-ubuntu-mono">Indicator for Keys Lock</a> <em>(third-party)</em> - An appindicator for showing the status of the keyboard lock keys. <a href="https://launchpad.net/~tsbarnes/+archive/indicator-keylock">(more)</a><br>
 	<input name="chkbox[]" type="checkbox" value="indicator-virtualbox"> <a href="apt://indicator-virtualbox">Indicator Virtualbox</a> <a href="https://launchpad.net/~michael-astrapi/+archive/ppa">(more)</a><br>
+	<input name="chkbox[]" type="checkbox" value="ubuntu-tweak"> <a href="apt://ubuntu-tweak">Ubuntu Tweak</a> <em>(third-party)</em> - 專門為 Ubuntu 製作的調校工具，素有 Ubuntu 優化大師之稱。 <a href="https://launchpad.net/~tualatrix/+archive/next" target="_blank">(more)</a><br>
 
 <h2><span class="h2">== 辦公 ==</span></h2>
 	<input name="chkbox[]" type="checkbox" value="dia"> <a href="apt://dia">Dia</a> - 流程圖繪製套件。<br>
