--- a/ubuntu/apturl-ubu11.10.html
+++ b/ubuntu/apturl-ubu11.10.html
@@ -139,7 +139,7 @@
 <div>
 	<span class="Comment">&quot; ---------------------------------- </span><br>
 	<span class="Comment">&quot; 凍仁翔 (Chu-siang, Lai)</span><br>
-	<span class="Comment">&quot; <a href="http://www.ubuntu-tw.org">http://www.ubuntu-tw.org</a></span><br>
+	<span class="Comment">&quot; <a href="http://jonny.ubuntu-tw.netg">http://jonny.ubuntu-tw.net</a></span><br>
 	<span class="Comment">&quot; ---------------------------------- </span><br>
 </div>
 </form>
