--- a/ubuntu/apturl-ubu11.10.html
+++ b/ubuntu/apturl-ubu11.10.html
@@ -20,7 +20,7 @@
 		-->
 	</style>
 
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
 	<script type="text/javascript">
 		jQuery(document).ready(function() {
 			// click select all chkbox.
