--- a/jonny/ubuntu-11.10.html
+++ b/jonny/ubuntu-11.10.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-tw">
 <head>
-<title>AptURL for Ubuntu 11.10</title>
+<title>helloTux</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link href="css/fu.css" type="text/css" rel="stylesheet">
@@ -37,9 +37,10 @@ jQuery(document).ready(function() {
 
 </head>
 <body>
+
 <form action="" method="post" enctype="text/plain">
 
-	<h1><span class="h1">= AptURL for Ubuntu 11.10 (Oneiric Ocelot) =</span></h1>
+	<h1><span class="h1">= AptURL for Ubuntu 11.10 =</span></h1>
 
 	<h2><span class="h2">== 附屬應用程式 ==</span></h2>
 	<input name="chkbox[]" type="checkbox" value="p7zip-full"> <a href="apt://p7zip-full">7zip</a> - 7z and 7za file archivers with high compression ratio.<br>
@@ -131,7 +132,7 @@ jQuery(document).ready(function() {
 	<div>
 		<span class="Comment">&quot; ---------------------------------- </span><br>
 		<span class="Comment">&quot; 凍仁翔 (Chu-siang, Lai)</span><br>
-		<span class="Comment">&quot; <a href="http://jonny.ubuntu-tw.netg">http://jonny.ubuntu-tw.net</a></span><br>
+		<span class="Comment">&quot; <a href="https://github.com/chusaing/helloTux" target="_blank">https://github.com/chusaing/helloTux"</a></span><br>
 		<span class="Comment">&quot; ---------------------------------- </span><br>
 	</div>
 </form>
