fix title and github link

--- a/jonny/ubuntu-11.10.html
+++ b/jonny/ubuntu-11.10.html
@@ -40,7 +40,7 @@ jQuery(document).ready(function() {
 
 <form action="" method="post" enctype="text/plain">
 
-	<h1><span class="h1">= AptURL for Ubuntu 11.10 =</span></h1>
+	<h1><span class="h1">= helloTux - Ubuntu 11.10 =</span></h1>
 
 	<h2><span class="h2">== 附屬應用程式 ==</span></h2>
 	<input name="chkbox[]" type="checkbox" value="p7zip-full"> <a href="apt://p7zip-full">7zip</a> - 7z and 7za file archivers with high compression ratio.<br>
@@ -132,7 +132,7 @@ jQuery(document).ready(function() {
 	<div>
 		<span class="Comment">&quot; ---------------------------------- </span><br>
 		<span class="Comment">&quot; 凍仁翔 (Chu-siang, Lai)</span><br>
-		<span class="Comment">&quot; <a href="https://github.com/chusaing/helloTux" target="_blank">https://github.com/chusaing/helloTux"</a></span><br>
+		<span class="Comment">&quot; <a href="https://github.com/chusaing/helloTux" target="_blank">https://github.com/chusaing/helloTux</a></span><br>
 		<span class="Comment">&quot; ---------------------------------- </span><br>
 	</div>
 </form>
