--- a/jonny/index.html
+++ b/jonny/index.html
@@ -17,7 +17,7 @@
 
 		<li>helloTux 一詞來自每個學程式的人都會寫到「Hello World」，那玩 Linux 就一定會碰到 Tux，所以就會有「Hello Tux」的產生，也因這樣我們改變了世界(World → Tux)，其中文名稱還未決定，目前有「企鵝您好」、「塔克斯您好」..</li>
 
-		<li>測試網址為 <a href="http://hellotux.dev.drx.tw/" target="_blank">http://hellotux.dev.drx.tw</a>，其舊版網址為 <a href="ubuntu-11.10.html" target="_blank">./ubuntu-11.10.html</a>。</li>
+		<li>測試網址為 <a href="http://hellotux.dev.drx.tw/dev/" target="_blank">http://hellotux.dev.drx.tw/dev/</a>，其舊版網址為 <a href="ubuntu-11.10.html" target="_blank">./ubuntu-11.10.html</a>。</li>
 
 		<li>預計用到的技術有 LAMP, jQuery, CSS。</li>
 	</ul>
