內容修正 by 紫色星宇。

--- a/jonny/index.html
+++ b/jonny/index.html
@@ -13,11 +13,11 @@
 	<h1><span class="h1">= About helloTux =</span></h1>
 
 	<ul>
-		<li>此專案宗旨在於讓使用者直接使用瀏覽器安裝 Linux 套件，換句話說這會是個 Linux 版的抓火狐，現階段將以 Ubuntu 的 AptURL 為主，後期會試著將 OpenSUSE 的 One-Click 整合近來。</li>
+		<li>此專案宗旨在於讓使用者直接使用瀏覽器安裝 Linux 套件，換句話說這會是個 Linux 版的抓火狐，現階段將以 Ubuntu 的 AptURL 為主，後期會試著將 OpenSUSE 的 One-Click 整合進來。</li>
 
-		<li>helloTux 一詞來自每個學程式的人都會寫到「Hello World」，那玩 Linux 就一定會碰到 Tux，所以就會有「Hello Tux」的產生，也因這樣我們改變了世界(World → Tux)，其中文名稱還未決定，目前有「企鵝您好」、「塔克斯您好」..</li>
+		<li>helloTux 一詞來自每個學程式的人都會寫到「Hello World」，而玩 Linux 就一定會碰到 Tux，於是「Hello Tux」就這樣誕生了！我們也改變了世界(World → Tux)！但其中文名稱尚未定案(目前有「企鵝您好」、「塔克斯您好」...)。</li>
 
-		<li>測試網址為 <a href="http://hellotux.dev.drx.tw/dev/" target="_blank">http://hellotux.dev.drx.tw/dev/</a>，其舊版網址為 <a href="ubuntu-11.10.html" target="_blank">./ubuntu-11.10.html</a>。</li>
+		<li>測試網址為 <a href="http://hellotux.dev.drx.tw/" target="_blank">http://hellotux.dev.drx.tw</a>，其舊版網址為 <a href="ubuntu-11.10.html" target="_blank">./ubuntu-11.10.html</a>。</li>
 
 		<li>預計用到的技術有 LAMP, jQuery, CSS。</li>
 	</ul>
@@ -26,7 +26,7 @@
 <br>
 <div>
 	<span class="Comment">&quot; ---------------------------------- </span><br>
-	<span class="Comment">&quot; 凍仁翔 (Chu-siang, Lai)</span><br>
+	<span class="Comment">&quot; 凍仁翔 (Chu-Siang, Lai)</span><br>
 	<span class="Comment">&quot; <a href="https://github.com/chusaing/helloTux" target="_blank">https://github.com/chusaing/helloTux</a></span><br>
 	<span class="Comment">&quot; ---------------------------------- </span><br>
 </div>
