--- a/jonny/index.html
+++ b/jonny/index.html
@@ -10,17 +10,23 @@
 <body>
 
 <div>
-	<h1><span class="h1">= About helloTux =</span></h1>
+	<h1><span class="h1">= helloTux =</span></h1>
+
+	<h2><span class="h2">== About ==</span></h2>
 
 	<ul>
-		<li>此專案宗旨在於讓使用者直接使用瀏覽器安裝 Linux 套件，換句話說這會是個 Linux 版的抓火狐，現階段將以 Ubuntu 的 AptURL 為主，後期會試著將 OpenSUSE 的 One-Click 整合進來。</li>
+		<li>此專案宗旨在於讓<b>使用者直接使用瀏覽器安裝 Linux 套件</b>，換句話說這會是個 Linux 版的<a href="http://gfx.tw/" target="_blank">抓火狐</a>，現階段將以 Ubuntu 的 AptURL 為主，後期會試著將 OpenSUSE 的 One-Click 整合進來。</li>
 
-		<li>helloTux 一詞來自每個學程式的人都會寫到「Hello World」，而玩 Linux 就一定會碰到 Tux，於是「Hello Tux」就這樣誕生了！我們也改變了世界(World → Tux)！但其中文名稱尚未定案(目前有「企鵝您好」、「塔克斯您好」...)。</li>
+		<li><b>helloTux</b> 一詞來自每個學程式的人都會寫到「Hello World」，而接觸 Linux 的人都知道其吉祥物的名稱是 Tux，於是「Hello Tux」就這樣誕生了！ [註1]</li>
+
+		<li>其中文名稱尚未定案，目前有「企鵝您好」、「塔克斯您好」...</li>
 
 		<li>測試網址為 <a href="http://hellotux.dev.drx.tw/" target="_blank">http://hellotux.dev.drx.tw</a>，其舊版網址為 <a href="ubuntu-11.10.html" target="_blank">./ubuntu-11.10.html</a>。</li>
 
-		<li>預計用到的技術有 LAMP, jQuery, CSS。</li>
+		<li>目前使用到的技術有 Linux, Apache, MySQL, PHP, jQuery, CSS。</li>
 	</ul>
+
+	<span class="Comment">[註1] 我們改變世界了！ Hello World → Hello Tux。</span>
 
 </div>
 <br>
