--- a/jonny/index.html
+++ b/jonny/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>helloTux</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link href="css/fu.css" type="text/css" rel="stylesheet">
+<link href="include/fu.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
