--- a/jonny/ubuntu-11.10.html
+++ b/jonny/ubuntu-11.10.html
@@ -4,7 +4,7 @@
 <title>helloTux</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<link href="css/fu.css" type="text/css" rel="stylesheet">
+<link href="include/fu.css" type="text/css" rel="stylesheet">
 
 <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
 <script type="text/javascript">
