獨立全選/取消及安裝的 javascript。

--- a/jonny/ubuntu-11.10.html
+++ b/jonny/ubuntu-11.10.html
@@ -1,40 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-tw">
 <head>
-<title>helloTux</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link type="text/css" href="include/fu.css" rel="stylesheet">
+<script type="text/javascript" src="include/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="include/select-install.js"></script>
 
-<link href="include/fu.css" type="text/css" rel="stylesheet">
-
-<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
-<script type="text/javascript">
-jQuery(document).ready(function() {
-		// click select all chkbox.
-		$("#chkboxClickAll").click(function() {
-			if ($("#chkboxClickAll").attr("checked")) {
-			$("input[name='chkbox[]']").each(function() {
-				$(this).attr("checked", true);
-				});
-			} else {
-			$("input[name='chkbox[]']").each(function() {
-				$(this).attr("checked", false);
-				});          
-			}
-			});
-
-		// click install button.
-		$("#btnInstall").click(function() {
-			var varAptList = [];
-			$("input[name='chkbox[]']:checked").each(function() {
-				varAptList.push( $(this).val() );
-				});
-
-			alert("apt://" + varAptList.join(','));			//對話視窗。
-			location.href="apt://" + varAptList.join(',');	//導向至 URL。
-			});
-});
-</script>
-
+<title>helloTux</title>
 </head>
 <body>
 
