apply violet.css

--- a/jonny/index.html
+++ b/jonny/index.html
@@ -2,40 +2,91 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-tw">
 
 <head>
-<title>helloTux</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link href="include/fu.css" type="text/css" rel="stylesheet">
+<meta name="keyword" content="ubuntu, apt, apturl"/>
+<meta name="author" content="凍仁翔 (Chu-Siang, Lai) - jonny (at) drx.tw, CSS: Violet - violet (at) drx.tw"/>
+<title>helloTux</title>
+<link href="include/violet.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
 
-<div>
-	<h1><span class="h1">= helloTux =</span></h1>
+<div id="container">
 
-	<h2><span class="h2">== About ==</span></h2>
+	<!--頁首-->
+	<div id="header">
+		<div id="header_menu">
+			<ul class="navigation_menu">
+				<li><a href="#" accesskey="U" title="上方功能區塊">:::</a> 回首頁</li>
+				<li>網站導覽</li>
+			</ul>
+		</div>
+	</div>
 
-	<ul>
-		<li>此專案宗旨在於讓<b>使用者直接使用瀏覽器安裝 Linux 套件</b>，換句話說這會是個 Linux 版的<a href="http://gfx.tw/" target="_blank">抓火狐</a>，現階段將以 Ubuntu 的 AptURL 為主，後期會試著將 OpenSUSE 的 One-Click 整合進來。</li>
+	<!--外框架圍繞內容-->
+	<div id="wrapper">
 
-		<li><b>helloTux</b> 一詞來自每個學程式的人都會寫到「Hello World」，而接觸 Linux 的人都知道其吉祥物的名稱是 Tux，於是「Hello Tux」就這樣誕生了！ [註1]</li>
+		<div id="menu_main">
+			<div class="menu_level">
+				<ul>
+					<li class="selected"><a href="index.html">About</a></li>
+					<li><a href="dev/index.php">Package</a></li>
+				</ul>
+			</div>
+		</div>
 
-		<li>其中文名稱尚未定案，目前有「企鵝您好」、「塔克斯您好」...</li>
+		<!--側邊欄-->
+		<div id="sidebar">
+			<a class="accesskey" href="#" accesskey="R" title="左方相關連結區塊">:::</a><br/>
+			<div class="menu_vertical">
+				<ul>
+					<li><a href="#">選單連結1</a></li>
+					<li><a href="#">選單連結2</a></li>
+					<li><a href="#">選單連結3</a></li>
+					<li><a href="#">選單連結4</a></li>
+					<li><a href="#">選單連結5</a></li>
+					<li><a href="#">選單連結6</a></li>
+				</ul>
+			</div>
+		</div>
 
-		<li>測試網址為 <a href="/dev/" target="_blank">./dev/</a>，而舊版網址為 <a href="ubuntu-11.10.html" target="_blank">./ubuntu-11.10.html</a>。</li>
+		<!--內容-->
+		<div id="content">
+			<!--麵包屑-->
+			<div class="breadcrumbs">
+				<a class="accesskey" href="#" accesskey="C" title="中央內容區塊">:::</a> 現在位置：首頁<br/>
+			</div>
+			<!--段落-->
+			<div class="paragraph">
 
-		<li>目前使用到的技術有 Linux, Apache, MySQL, PHP, jQuery, CSS。</li>
-	</ul>
+				<h1>About</h1>
 
-	<span class="Comment">[註1] 我們改變世界了！ Hello World → Hello Tux。</span>
+				<p>
+				<ul>
+					<li>此專案宗旨在於讓<b>使用者直接使用瀏覽器安裝 Linux 套件</b>，換句話說這會是個 Linux 版的<a href="http://gfx.tw/" target="_blank">抓火狐</a>，現階段將以 Ubuntu 的 AptURL 為主，後期會試著將 OpenSUSE 的 One-Click 整合進來。</li>
 
-</div>
-<br>
-<div>
-	<span class="Comment">&quot; ---------------------------------- </span><br>
-	<span class="Comment">&quot; 凍仁翔 (Chu-Siang, Lai)</span><br>
-	<span class="Comment">&quot; <a href="https://github.com/chusaing/helloTux" target="_blank">https://github.com/chusaing/helloTux</a></span><br>
-	<span class="Comment">&quot; <a href="http://jonny.ubuntu-tw.net" target="_blank">http://jonny.ubuntu-tw.net</a></span><br>
-	<span class="Comment">&quot; ---------------------------------- </span><br>
+					<li><b>helloTux</b> 一詞來自每個學程式的人都會寫到「Hello World」，而接觸 Linux 的人都知道其吉祥物的名稱是 Tux，於是「Hello Tux」就這樣誕生了！ [註1]</li>
+
+					<li>其中文名稱尚未定案，目前有「企鵝您好」、「塔克斯您好」...</li>
+
+					<li>測試網址為 <a href="/dev/" target="_blank">./dev/</a>，而舊版網址為 <a href="ubuntu-11.10.html" target="_blank">./ubuntu-11.10.html</a>。</li>
+
+					<li>目前使用到的技術有 Linux, Apache, MySQL, PHP, jQuery, CSS。</li>
+				</ul>
+
+				<span class="Comment">[註1] 我們改變世界了！ Hello World → Hello Tux。</span>
+				</p>
+			</div>
+		</div>
+
+		<div id="footer">
+			<p>
+			<span class="Comment">凍仁翔 (Chu-Siang, Lai)</span> / 
+			<span class="Comment"><a href="http://jonny.ubuntu-tw.net" target="_blank">http://jonny.ubuntu-tw.net</a></span><br>
+			<span class="Comment"><a href="https://github.com/chusaing/helloTux" target="_blank">https://github.com/chusaing/helloTux</a></span>
+			</p>
+		</div>
+	</div>
 </div>
 
 </body>
