--- a/jonny/old/ubuntu-11.10.html
+++ b/jonny/old/ubuntu-11.10.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-tw">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link type="text/css" href="include/fu.css" rel="stylesheet">
+<link type="text/css" href="../include/fu.css" rel="stylesheet">
 <script type="text/javascript" src="include/jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src="include/select-install.js"></script>
 
