--- a/jonny/404.html
+++ b/jonny/404.html
@@ -27,7 +27,7 @@
 	<div>
 		<span class="Comment">&quot; ---------------------------------- </span><br>
 		<span class="Comment">&quot; 凍仁翔 (Chu-siang, Lai)</span><br>
-		<span class="Comment">&quot; <a href="http://jonny.ubuntu-tw.netg">http://jonny.ubuntu-tw.net</a></span><br>
+		<span class="Comment">&quot; <a href="http://note.drx.twg">http://note.drx.tw</a></span><br>
 		<span class="Comment">&quot; ---------------------------------- </span><br>
 	</div>
 </body>
