change github link.

--- a/jonny/old/ubuntu-11.10.html
+++ b/jonny/old/ubuntu-11.10.html
@@ -104,7 +104,7 @@
 	<div>
 		<span class="Comment">&quot; ---------------------------------- </span><br>
 		<span class="Comment">&quot; 凍仁翔 (Chu-siang, Lai)</span><br>
-		<span class="Comment">&quot; <a href="https://github.com/chusaing/helloTux" target="_blank">https://github.com/chusaing/helloTux</a></span><br>
+		<span class="Comment">&quot; <a href="https://github.com/chusiang/helloTux" target="_blank">https://github.com/chusiang/helloTux</a></span><br>
 		<span class="Comment">&quot; ---------------------------------- </span><br>
 	</div>
 </form>
