將導覽列中文化，英文部份待後期再處理。

--- a/jonny/cover.html
+++ b/jonny/cover.html
@@ -38,9 +38,9 @@
             <div class="inner">
               <h3 class="masthead-brand">helloTux</h3>
               <ul class="nav masthead-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Packages</a></li>
-                <li><a href="http://note.drx.tw" target="_blank">Blog</a></li>
+                <li class="active"><a href="#">首頁</a></li>
+                <li><a href="#">套件列表</a></li>
+                <li><a href="http://note.drx.tw" target="_blank">部落格</a></li>
               </ul>
             </div>
           </div>
@@ -55,7 +55,7 @@
               </ul>
             </p>
             <p class="text-right">
-              <a href="#" class="btn btn-lg btn-default">Enter</a>
+              <a href="#" class="btn btn-lg btn-default">開始</a>
             </p>
           </div>
 
