add the os menu.

--- a/jonny/cover.html
+++ b/jonny/cover.html
@@ -54,6 +54,17 @@
                 <li>目前使用到的技術有 Apache, Bootstrap. CSS, HTML5, Linux, MySQL, Nginx, PHP, jQuery。</li>
               </ul>
             </p>
+			<p>
+			  作業系統：
+              <select class="form-control" style="width: 200px">
+                <option>自動偵測</option>
+                <option>Debian</option>
+                <option>Ubuntu</option>
+                <option>SUSE</option>
+                <option>CentOS</option>
+                <option>Arch Linux</option>
+              </select>
+			</p>
             <p class="text-right">
               <a href="#" class="btn btn-lg btn-default">開始</a>
             </p>
