選擇 OS 部份改用圖示呈現。

--- a/jonny/cover.html
+++ b/jonny/cover.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="chusiang">
-    <link rel="shortcut icon" href="http://getbootstrap.com/assets/ico/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <title>helloTux</title>
 
@@ -46,7 +46,7 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">歡迎光臨</h1>
+<!--            <h1 class="cover-heading">歡迎光臨</h1>-->
             <p>
               <ul>
                 <li><mark>helloTux</mark> 是一個提供管理並分享 Linux 套件列表的網站。名字取自學習程式時的第一支程式「Hello World」。</li>
@@ -54,28 +54,77 @@
                 <li>目前使用到的技術有 Apache, Bootstrap. CSS, HTML5, Linux, MySQL, Nginx, PHP, jQuery。</li>
               </ul>
             </p>
-			<p>
-			  作業系統：
-              <select class="form-control" style="width: 200px">
-                <option>自動偵測</option>
-                <option>Debian</option>
-                <option>Ubuntu</option>
-                <option>SUSE</option>
-                <option>CentOS</option>
-                <option>Arch Linux</option>
-              </select>
-			</p>
-            <p class="text-right">
-              <a href="#" class="btn btn-lg btn-default">開始</a>
-            </p>
+<!--            <p>-->
+<!--              作業系統：-->
+<!--              <select class="form-control" style="width: 200px">-->
+<!--                <option>自動偵測</option>-->
+<!--                <option>Debian</option>-->
+<!--                <option>Ubuntu</option>-->
+<!--                <option>SUSE</option>-->
+<!--                <option>CentOS</option>-->
+<!--                <option>Arch Linux</option>-->
+<!--              </select>-->
+<!--            </p>-->
+<!--            <p class="text-right">-->
+<!--              <a href="#" class="btn btn-lg btn-default">開始</a>-->
+<!--            </p>-->
+            <p> &nbsp; </p>
+
+            <div class="row">
+
+              <div class="col-6 col-sm-6 col-lg-2">
+                <div class="thumbnail">
+                  <a href="#" ><img data-src="holder.js/128x128" class="img-rounded" alt="Debian"></img></a>
+                  <h3>Debian</h3>
+                </div>
+              </div>
+
+              <div class="col-6 col-sm-6 col-lg-2">
+                <div class="thumbnail">
+                  <a href="#" ><img data-src="holder.js/128x128" class="img-rounded" alt="Ubuntu"></img></a>
+                  <h3>Ubuntu</h3>
+                </div>
+              </div>
+
+              <div class="col-6 col-sm-6 col-lg-2">
+                <div class="thumbnail">
+                  <img data-src="holder.js/128x128" class="img-rounded" alt="SUSE"></img>
+                  <h3>SUSE</h3>
+                </div>
+              </div>
+
+              <div class="col-6 col-sm-6 col-lg-2">
+                <div class="thumbnail">
+                  <img data-src="holder.js/128x128" class="img-rounded" alt="Arch Linux"></img>
+                  <h3>Arch Linux</h3>
+                </div>
+              </div>
+
+              <div class="col-6 col-sm-6 col-lg-2">
+                <div class="thumbnail">
+                  <img data-src="holder.js/128x128" class="img-rounded" alt="Fedora"></img>
+                  <h3>Fedora</h3>
+                </div>
+              </div>
+
+              <div class="col-6 col-sm-6 col-lg-2">
+                <div class="thumbnail">
+                  <img data-src="holder.js/128x128" class="img-rounded" alt="OSX"></img>
+                  <h3>OSX</h3>
+                </div>
+              </div>
+
+            </div> <!--/row-->
+
+
           </div>
+
 
           <div class="mastfoot">
             <div class="inner">
               <p class="text-center">
                 Coypright © from 2012-2014 <a href="http://note.drx.tw/p/about-chu-siang-lai.html" target="_blank">chusiang</a> <a href="http://www.gnu.org/licenses/gpl.html" target="_blank">GPL v2 or later</a>.
               </p>
-<!--                Coypright © from 2012-2014 chusiang GPL v2 or later / Cover template for <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>, by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.</p>-->
             </div>
           </div>
 
@@ -90,6 +139,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/holder.js"></script>
 <!--    <script src="js/docs.js"></script>-->
   
 
