--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a id="hellotux" class="anchor" href="#hellotux" aria-hidden="true"><span class="octicon octicon-link"></span></a>helloTux</h1>
 
 <blockquote>
-<p>請注意！此專案已不再維護，請改至 <a href="http://gubt.drx.tw/">gUBT</a> 專案。</p>
+<p>請注意！此專案已不再維護，請改至 <a href="http://gup.drx.tw/">gup</a> 專案。</p>
 
 <p>-凍仁翔 @ Sat Oct 10 01:31:20 CST 2015</p>
 </blockquote>
