--- a/index.html
+++ b/index.html
@@ -9,51 +9,68 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
     <title>helloTux #chusiang</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>helloTux</h1>
-        <h2>Manager and share your linux package list.</h2>
+        <a href="https://github.com/chusiang/helloTux" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 
-        <section id="downloads">
-          <a href="https://github.com/chusiang/helloTux/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/chusiang/helloTux/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/chusiang/helloTux" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
+        <h1>helloTux</h1>
+        <p>Manager and share your linux package list.</p>
+
       </div>
     </header>
 
     <div class="container">
       <section id="main_content">
-        <h1>
-<a id="hellotux" class="anchor" href="#hellotux" aria-hidden="true"><span class="octicon octicon-link"></span></a>helloTux</h1>
 
-<blockquote>
-<p>請注意！此專案已不再維護，請改至 <a href="http://gup.drx.tw/">gup</a> 專案。</p>
+        <blockquote>
+        <p>請注意！此專案已不再維護，請改至 <a href="http://gup.drx.tw/">gup</a> 專案。</p>
+        
+        <p>-凍仁翔 @ Sat Oct 10 01:31:20 CST 2015</p>
+        </blockquote>
 
-<p>-凍仁翔 @ Sat Oct 10 01:31:20 CST 2015</p>
-</blockquote>
+        <h2>
+          <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+          about
+        </h2>
 
-<h2>
-<a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h2>
+        <ul>
+          <li>
+            <p>
+              此專案使用 <a href="http://www.gnu.org/licenses/gpl.html">GPL v2 or later</a> 授權，其主要目的是讓使用者直接 <strong>使用瀏覽器安裝 Linux 套件</strong> 並 <strong>擁有專屬套件列表</strong> ，換句話說這會是個 Linux 版的<a href="http://gfx.tw/">抓火狐</a>，現階段將以 Ubuntu 的 AptURL 為主，後期會試著將 OpenSUSE 的 One-Click 整合進來。
+            </p>
+          </li>
+          <li>
+            <p>
+              <strong>helloTux</strong> 一詞來自每個學程式的人都會寫到「Hello World」，而接觸 Linux 的人都知道其吉祥物的名稱是 Tux，於是「Hello Tux」就這樣誕生了！ [註1]
+            </p>
+          </li>
+          <li>
+            <p>
+              其中文名稱尚未定案，目前有「企鵝您好」、「塔克斯您好」...
+            </p>
+          </li>
+          <li>
+            <p>
+              目前使用到的技術有 Linux, Apache, Nginx, MySQL, PHP, jQuery, CSS。
+            </p>
 
-<ul>
-<li><p>此專案使用 <a href="http://www.gnu.org/licenses/gpl.html">GPL v2 or later</a> 授權，其主要目的是讓使用者直接 <strong>使用瀏覽器安裝 Linux 套件</strong> 並 <strong>擁有專屬套件列表</strong> ，換句話說這會是個 Linux 版的<a href="http://gfx.tw/">抓火狐</a>，現階段將以 Ubuntu 的 AptURL 為主，後期會試著將 OpenSUSE 的 One-Click 整合進來。</p></li>
-<li><p><strong>helloTux</strong> 一詞來自每個學程式的人都會寫到「Hello World」，而接觸 Linux 的人都知道其吉祥物的名稱是 Tux，於是「Hello Tux」就這樣誕生了！ [註1]</p></li>
-<li><p>其中文名稱尚未定案，目前有「企鵝您好」、「塔克斯您好」...</p></li>
-<li><p>舊版網址為 <a href="http://hellotux.dev.drx.tw/old/ubuntu-11.10.html">old/ubuntu-11.10.html</a>。</p></li>
-<li>
-<p>目前使用到的技術有 Linux, Apache, Nginx, MySQL, PHP, jQuery, CSS。</p>
-
-<p>[註1] 我們改變世界了！ Hello <strong>World</strong> →  Hello <strong>Tux</strong>。</p>
-</li>
-</ul>
+            <p>
+              [註1] 我們改變世界了！ Hello <strong>World</strong> →  Hello <strong>Tux</strong>。
+            </p>
+          </li>
+        </ul>
       </section>
     </div>
 
+    <footer>
+	    <small>Coypright © from 2012-2015 <a href='http://note.drx.tw/p/about-chu-siang-lai.html' target='_blank'>chusiang</a> GPL v2 or later.</small>
+    </footer>
     
   </body>
 </html>
